# SFML

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  Doxygen.hpp  Makefile  README.md  ahmad  appveyor.yml  changelog.md  changelog.txt  compile_commands.json  doxygen.css  f  footer.htm  license.md  license.txt  migration.md  mull.yml  quickly need help to finish my project  readme.md  readme.txt
CSFML/src/SFML/: CMakeLists.txt  ConvertEvent.h  Internal.h  Makefile
bindings/c/: CMakeLists.txt  license.txt
bindings/c/cmake/: Config.cmake  Macros.cmake
bindings/c/doc/: CMakeLists.txt  header.htm
doc/: CMakeLists.txt  doxyfile.in  doxygen.css  footer.htm  footer.html  header.htm  header.html  header.html.in  mainpage.hpp  migration.md  searchOverrides.css
examples/: CMakeLists.txt  asset_licenses.md  readme.md
examples/X11/: CMakeLists.txt  X11.cpp  gl.h
examples/android/: .gitignore  AndroidManifest.xml  build.gradle  build.gradle.kts  project.properties
examples/assets/: Info.plist  LaunchScreen.storyboard  info.plist
examples/clipboard/: CMakeLists.txt  Clipboard.cpp
examples/cocoa/: CMakeLists.txt  CocoaAppDelegate.h  CocoaAppDelegate.mm  NSString+stdstring.h  NSString+stdstring.mm  main.m  readme.txt
examples/event_handling/: CMakeLists.txt  EventHandling.cpp
examples/file_dropping/: CMakeLists.txt  FileDropping.cpp
examples/ftp/: CMakeLists.txt  Ftp.cpp
examples/fullscreen/: CMakeLists.txt  Fullscreen.cpp
examples/http/: CMakeLists.txt  Http.cpp
examples/iOS/: CMakeLists.txt  main.cpp
examples/island/: CMakeLists.txt  Island.cpp  stb_perlin.h
examples/joystick/: CMakeLists.txt  Joystick.cpp
examples/keyboard/: CMakeLists.txt  Keyboard.cpp
examples/message_loop/: CMakeLists.txt  MessageLoop.cpp
examples/modules/: CMakeLists.txt  Modules.cpp
examples/opengl/: CMakeLists.txt  OpenGL.cpp  gl.h
examples/pong/: CMakeLists.txt  Pong.cpp
examples/raw_input/: CMakeLists.txt  RawInput.cpp
examples/sftp/: CMakeLists.txt  Sftp.cpp
examples/shader/: CMakeLists.txt  Effect.hpp  Shader.cpp
examples/sockets/: CMakeLists.txt  Sockets.cpp  TCP.cpp  TCP.hpp  UDP.cpp  UDP.hpp
examples/sound/: CMakeLists.txt  Sound.cpp
examples/sound_capture/: CMakeLists.txt  SoundCapture.cpp
examples/sound_device/: CMakeLists.txt  SoundDevice.cpp
examples/sound_effects/: CMakeLists.txt  SoundEffects.cpp
examples/sound_stage/: CMakeLists.txt  SoundStage.cpp  imconfig-SFML.h  imconfig.h  imgui-SFML.cpp  imgui-SFML.h  imgui-SFML_export.h
examples/sprite_batch/: Batching.cpp  CMakeLists.txt
examples/stencil/: CMakeLists.txt  Stencil.cpp
examples/tennis/: CMakeLists.txt  Tennis.cpp
examples/text/: CMakeLists.txt  Text.cpp
examples/voip/: CMakeLists.txt  Client.cpp  Client.hpp  Server.cpp  Server.hpp  VoIP.cpp
examples/vulkan/: CMakeLists.txt  Vulkan.cpp  vulkan.h
examples/win32/: CMakeLists.txt  Win32.cpp
examples/window/: CMakeLists.txt  Window.cpp
examples/wobbling/: CMakeLists.txt  Wobbling.cpp
modules/SFML/: CMakeLists.txt  Config.cppm  audio.cppm  graphics.cppm  network.cppm  system.cppm  window.cppm
modules/SFML/system/: Err.cppm  (+14 more)
src/SFML/: Android.mk  CMakeLists.txt  Makefile  PCH.hpp
test/: CMakeLists.txt  DoctestMain.cpp  main.cpp
test/Audio/: AlResource.cpp  AlResource.test.cpp  AudioResource.test.cpp  CMakeLists.txt  InputSoundFile.test.cpp  Listener.test.cpp  Music.test.cpp  OutputSoundFile.test.cpp  Sound.cpp  Sound.test.cpp  SoundBuffer.test.cpp  SoundBufferRecorder.cpp  SoundFileFactory.test.cpp  SoundFileReader.test.cpp  SoundFileWriter.test.cpp  SoundRecorder.cpp  SoundSource.test.cpp  SoundStream.test.cpp
test/Graphics/: BlendMode.cpp  BlendMode.test.cpp  CMakeLists.txt  CircleShape.cpp  CircleShape.test.cpp  Color.cpp  Color.test.cpp  ConvexShape.cpp  ConvexShape.test.cpp  CoordinateType.test.cpp  Drawable.test.cpp  Font.test.cpp  Glsl.test.cpp  Glyph.cpp  Glyph.test.cpp  GraphicsUtil.hpp  Image.cpp  Image.test.cpp  LineShape.test.cpp  Rect.cpp  Rect.test.cpp  RectangleShape.cpp  RectangleShape.test.cpp  Render.test.cpp  RenderStates.cpp  RenderStates.test.cpp  RenderTarget.cpp  RenderTarget.test.cpp  RenderTexture.test.cpp  RenderWindow.test.cpp  Shader.cpp  Shader.test.cpp  Shape.cpp  Shape.test.cpp  Sprite.cpp  Sprite.test.cpp  SpriteGeometry.test.cpp  StencilMode.test.cpp  Text.cpp  Text.test.cpp  (+17 more)
test/Network/: CMakeLists.txt  Dns.test.cpp  Ftp.test.cpp  Http.test.cpp  IpAddress.cpp  IpAddress.test.cpp  Packet.cpp  Packet.test.cpp  Sftp.test.cpp  Socket.test.cpp  SocketSelector.cpp  SocketSelector.test.cpp  TcpListener.test.cpp  TcpLoopback.test.cpp  TcpSocket.cpp  TcpSocket.test.cpp  UdpSocket.test.cpp
test/System/: Angle.cpp  Angle.test.cpp  CMakeLists.txt  Clock.cpp  Clock.test.cpp  Config.cpp  Config.test.cpp  Err.cpp  Err.test.cpp  Exception.test.cpp  FileInputStream.cpp  FileInputStream.test.cpp  MemoryInputStream.cpp  MemoryInputStream.test.cpp  Sleep.test.cpp  String.test.cpp  Time.cpp  Time.test.cpp  TimeoutWithPredicate.test.cpp  UniqueResource.test.cpp  Utf.test.cpp  Vector2.cpp  Vector2.test.cpp  Vector3.cpp  Vector3.test.cpp  Version.test.cpp  test2.txt
test/TestUtilities/: Approx.hpp  Array.hpp  AudioUtil.cpp  AudioUtil.hpp  GraphicsUtil.cpp  GraphicsUtil.hpp  NetworkUtil.cpp  NetworkUtil.hpp  SystemUtil.cpp  SystemUtil.hpp  WindowUtil.cpp  WindowUtil.hpp
test/Window/: CMakeLists.txt  Clipboard.test.cpp  Context.cpp  Context.test.cpp  ContextSettings.cpp  ContextSettings.test.cpp  Cursor.test.cpp  Err.test.cpp  Event.test.cpp  GlResource.cpp  GlResource.test.cpp  Joystick.test.cpp  Keyboard.test.cpp  Mouse.test.cpp  VideoMode.cpp  VideoMode.test.cpp  Vulkan.test.cpp  Window.test.cpp  WindowBase.cpp  WindowBase.test.cpp  WindowBaseWin32.test.cpp  WindowHandleWin32.test.cpp  WindowUtil.hpp
test/install/: CMakeLists.txt  Install.cpp
test/integrate/: main.cpp
test/src/: CatchMain.cpp  Main.cpp  Rect.cpp  UnitTests.cpp  UnitTests.hpp  Vector2.cpp  Vector3.cpp  Window.cpp
(+2694 files in other folders)
